[team-soju#4072] naming, applying formatting and code conventions, and expanding unit tests